Grace/tests/gibbs/errors/t011.grace
// ERROR = P1004
print("Hello world.")
# This is a comment.
